fix issue with nested section alignment

--- a/src/blocks/column/style.scss
+++ b/src/blocks/column/style.scss
@@ -3,7 +3,7 @@
  *
  * CSS for Sections
  */
- .wp-block-kadence-column > .kt-inside-inner-col > .wp-block-kadence-column {
+.wp-block-kadence-column.kb-section-dir-horizontal > .kt-inside-inner-col > .wp-block-kadence-column {
     flex: 1;
 }
 .wp-block-kadence-column {
